added homepage key and value

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "more-books-please",
+  "homepage": "http://melissalafranchise.com/more-books-please/index.html",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
