final changes for deployment to personal site; changed headline to link and adjusted css

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "more-books-please",
-  "homepage": "http://melissalafranchise.com/more-books-please",
+  "homepage": "http://melissalafranchise.com/more-books-please/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
