--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,8 +1,5 @@
+Options -MultiViews
 RewriteEngine On
-RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -f [OR]
-RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -d
-RewriteRule ^ - [L]
-
-# Fallback all other routes to index.html
-RewriteRule ^ /more-books-please/index.html [L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^ index.html [QSA,L]
 
